# multimedia-feedback-coding

./: .env.example  .gitignore  AI_AGENTS.md  DATENFLUSS.md  Justfile  PROJECT_STATUS.md  PROJEKT_STATUS.md  README.md  pyproject.toml  run_self_test.bat  settings.json  setup.bat  start.bat  test_gui_layout.py  test_hardware.py  test_mediapipe_tasks.py  test_pipeline_check.py
scripts/: capture_phase1_gui_screenshots.py  create_mock_project.py  debug_pipeline.py  process_complete_pipeline.py  process_gesture_workflow.py  process_ocr_workflow.py  quick_debug.py  run_gui_self_test.py  test_user_data.py  test_webcams.py
src/screenreview/: __init__.py  config.py  constants.py  diagnose.py  main.py
src/screenreview/cli/: ocr_cli.py
src/screenreview/core/: __init__.py  folder_scanner.py  navigator.py  precheck.py  queue_manager.py  state.py
src/screenreview/gui/: __init__.py  __main__.py  batch_overview_widget.py  comparison_widget.py  controller.py  controls_widget.py  cost_widget.py  help_system.py  main_window.py  metadata_widget.py  preflight_dialog.py  progress_widget.py  settings_dialog.py  smart_hint_widget.py  transcript_live_widget.py  viewer_widget.py  workers.py
src/screenreview/integrations/: __init__.py  local_models.py  openai_client.py  openrouter_client.py  replicate_client.py
src/screenreview/models/: __init__.py  analysis_result.py  cost_entry.py  extraction_result.py  screen_item.py
src/screenreview/pipeline/: __init__.py  analyzer.py  annotation_analyzer.py  audio_recorder.py  differ.py  exporter.py  frame_extractor.py  gesture_detector.py  ocr_engine.py  ocr_engines.py  ocr_processor.py  recorder.py  smart_selector.py  transcriber.py  trigger_detector.py
src/screenreview/utils/: __init__.py  cost_calculator.py  extraction_init.py  (+3 more)
tests/: conftest.py  test_analyzer.py  test_annotations.py  test_comprehensive_transcript.py  test_config.py  test_cost_calculator.py  test_differ.py  test_exporter.py  test_folder_scanner.py  test_frame_extractor.py  test_gesture_detector.py  test_gui_help.py  test_navigator.py  test_ocr_engine.py  test_ocr_processor.py  test_pipeline_integration.py  test_precheck.py  test_queue_manager.py  test_recorder.py  test_smart_selector.py  test_transcriber.py  test_trigger_detector.py
(+14 files in other folders)
