[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimedia-feedback-coding"
version = "0.1.0"
description = "Desktop tool for screenshot review and feedback coding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyQt6>=6.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
multimedia-feedback-coding-gui = "screenreview.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E203", "E501", "W503"]
