[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimedia-feedback-coding"
version = "0.1.0"
description = "Desktop tool for screenshot review and feedback coding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.9",
  "PyQt6>=6.5",
  "sounddevice>=0.4",
  "pytesseract>=0.3.10",
  "Pillow>=10.0",
  "mediapipe>=0.10",
  "easyocr>=1.7",
]

[project.optional-dependencies]
ocr-extended = [
  "paddleocr>=2.7",
]
dev = [
  "pytest>=7.4",
  "ruff>=0.6",
  "black>=24.0",
  "flake8>=7.0",
  "mypy>=1.8",
]

[project.scripts]
multimedia-feedback-coding-gui = "screenreview.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E203", "E501", "W503"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
